instalacion de jumbotron

--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasteleria Merlin</title>
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <H1>Pasteleria Merlin</H1>
-    <h2>Bienvenidos a pasteleria  Merlin</h2>
-    <Div>Los mejores pasteles de la region de laredo </Div>
+    <div class="jumbotron">
+        <div class="container">
+          <h1 class="display-3">Pasteleria </h1>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h2>Los mejores pasteles de Nuevo Laredo</h2>
+                <p>a los mejores precios</p>                
+              </div>
+              <div class="col-md-4">
+                <h2>Productos</h2>
+                <p>Catalogo de productos</p>               
+              </div>
+              <div class="col-md-4">
+                <h2>Contactanos</h2>
+                <p>Visita nuestra sucursal</p>              
+              </div>
+
+        <script src="node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="node_modules/popper.js/dist/popper.min.js"></script>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
 </body>
 </html>
