--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
 <body>
     <div class="jumbotron">
         <div class="container">
-          <h1 class="display-3">Pasteleria </h1>
+          <h1 class="display-3">Pasteleria</h1>
         </div>
       </div>
 
       <div class="container">
         <div class="row">
-            <div class="col-md-4">
-                <h2>Los mejores pasteles de Nuevo Laredo</h2>
-                <p>a los mejores precios</p>                
+            <div class="col-md-6 col-lg-4 col-sm-6">
+                <h2>Pasteles</h2>
+                <p>Deliciosos y puede pedirlo a la medida</p>                
               </div>
-              <div class="col-md-4">
-                <h2>Productos</h2>
-                <p>Catalogo de productos</p>               
+              <div class="col-md-6 col-lg-4 col-sm-6">
+                <h2>Quequitos</h2>
+                <p>Muy ricos y muy baratos</p>               
               </div>
-              <div class="col-md-4">
-                <h2>Contactanos</h2>
-                <p>Visita nuestra sucursal</p>              
+              <div class="col-md-6 col-lg-4 col-sm-6">
+                <h2>Tartas</h2>
+                <p>Las mejores tartas de la ciudad</p>              
               </div>
 
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
