Agregado de botones y lista

--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,24 +10,49 @@
 <body>
     <div class="jumbotron">
         <div class="container">
-          <h1 class="display-3">Pasteleria</h1>
+          <h1 class="display-3">Pasteleria Merlin</h1>
         </div>
       </div>
 
       <div class="container">
         <div class="row">
-            <div class="col-md-6 col-lg-4 col-sm-6">
-                <h2>Pasteles</h2>
-                <p>Deliciosos y puede pedirlo a la medida</p>                
-              </div>
-              <div class="col-md-6 col-lg-4 col-sm-6">
-                <h2>Quequitos</h2>
-                <p>Muy ricos y muy baratos</p>               
-              </div>
-              <div class="col-md-6 col-lg-4 col-sm-6">
-                <h2>Tartas</h2>
-                <p>Las mejores tartas de la ciudad</p>              
-              </div>
+          <div class="col-md-6 col-lg-4 col-sm-6">
+            <h2>Pasteles</h2>
+            <p>Deliciosos y puede pedirlo a la medida</p>                
+          </div>
+          <div class="col-md-6 col-lg-4 col-sm-6">
+            <h2>Quequitos</h2>
+            <p>Muy ricos y muy baratos</p>               
+          </div>
+          <div class="col-md-6 col-lg-4 col-sm-6">
+            <h2>Tartas</h2>
+            <p>Las mejores tartas de la ciudad</p>              
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4">
+            <div>
+              <h2>Como se preparan</h2>
+            <p>Proceso de preparacion</p>  
+            </div>
+            <div><button class = "btn btn-primary btn-ver">Ver detalles</button></div>              
+          </div>
+          <div class="col-sm-4">
+            <div>
+              <h2>Estilos que manejamos</h2>
+            <p>Da click para ver más</p>  
+            </div>
+            <div><button class = "btn btn-primary btn-ver">Ver detalles</button></div>              
+          </div>
+          <div class="col-sm-4">
+            <div>
+              <h2>Horarios</h2>
+            <p>Ver más</p>  
+            </div>
+            <div><button class = "btn btn-primary btn-ver">Ver detalles</button></div>              
+          </div>
+        </div>
+      </div>
 
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
         <script src="node_modules/popper.js/dist/popper.min.js"></script>
