Grid y botones y componentes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
           <div class="col-sm-4">
             <div>
-              <h2>Estilos que manejamos</h2>
+              <h2>Estilos decorativos que manejamos</h2>
             <p>Da click para ver más</p>  
             </div>
             <div><button class = "btn btn-primary btn-ver">Ver detalles</button></div>              
@@ -53,10 +53,8 @@
           </div>
         </div>
       </div>
-
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
         <script src="node_modules/popper.js/dist/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
 </body>
 </html>
